--- a/src/components/Hero-section/mainsection.css
+++ b/src/components/Hero-section/mainsection.css
@@ -6,7 +6,11 @@ main {
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
-  flex: 1;
+  background-image: url('https://res.cloudinary.com/dd8ikgzov/image/upload/w_1920,h_1080/v1687280096/Vegan-Paradise/pizzzabg_w5cvmo.webp');
+  background-position: right;
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 @media screen and (max-width: 666px) {
